<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".transaksi.TransaksiDetailCetakKwitansi">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextIDProyek"
            android:layout_width="0dp"
            android:editable="false"
            android:layout_height="0dp"
            android:hint="@string/id_kwitansi" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextIDKwitansi"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="@string/id_kwitansi" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_marginTop="16dp"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTanggalKwitansi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/calendar"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/txt_tgl_kwitansi"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNamaProyek"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="@string/nama_proyek" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNamaClient"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="@string/nama_client" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextBiayaTenagaKerja"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/biaya_tenaga_kerja" />
    </com.google.android.material.textfield.TextInputLayout>
    <ListView
        android:id="@+id/list_semua_barang_beli"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="true" />
    <ListView
        android:id="@+id/list_semua_namabarang"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        android:drawSelectorOnTop="false" />
    <ListView
        android:id="@+id/list_semua_jml_barang"
        android:layout_width="0dp"
        android:visibility="visible"
        android:layout_height="0dp"
        android:drawSelectorOnTop="false" />
    <ListView
        android:id="@+id/list_semua_harga_belibarang"
        android:layout_width="0dp"
        android:visibility="visible"
        android:layout_height="0dp"
        android:drawSelectorOnTop="false" />
    <Button
        android:id="@+id/buttonCetakKwitansi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_cetak_kwitansi"/>
</LinearLayout>