<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".laporan.LaporanDetailCetakPengeluaranDana">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextNamaProyek"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="@string/nama_proyek" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTanggalCetak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/calendar"
            android:editable="false"
            android:focusable="false"
            android:hint="@string/txt_tgl_cetak"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTglMulaiProyek"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="Tanggal Mulai Proyek" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:errorEnabled="true">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextTglSelesaiProyek"
            android:layout_width="match_parent"
            android:editable="false"
            android:layout_height="wrap_content"
            android:hint="Tanggal Selesai Proyek" />
    </com.google.android.material.textfield.TextInputLayout>
    <ListView
        android:id="@+id/list_semua_barang"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />
    <Button
        android:id="@+id/buttonCetakPengeluaranDana"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cetak_laporan_pengeluaran_dana"/>
    <ListView
        android:id="@+id/list_kendala"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />
    <ListView
        android:id="@+id/list_solusi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />
</LinearLayout>